# JsonTreeViewer

./: .gitignore  CMakeLists.txt  JsonTreeViewer.pro  README.md  generate_test_json.py  jsontreemodel.cpp  jsontreeview.cpp  jsontreeview.h  jsontreeviewer.cpp  jsontreeviewer.h  sdk.pri  simdjson.pri  test.cpp  test_simdjson.cpp  todo.md
src/: common.cpp  common.h  config.cpp  config.h  jsonnode.h  jsontreedelegate.cpp  jsontreedelegate.h  jsontreemodel.cpp  jsontreemodel.h  jsontreeview.cpp  jsontreeview.h  jsontreeviewer.cpp  jsontreeviewer.h  loadworker.cpp  loadworker.h  logging.h  memorymappedfile.cpp  memorymappedfile.h  style_assets.h  test.cpp
src/navigation/: pathnavigator.cpp  pathnavigator.h  searchpanel.cpp  searchpanel.h  searchresultdelegate.cpp  searchresultdelegate.h  searchworker.cpp  searchworker.h
src/strategies/: extremefilestrategy.cpp  extremefilestrategy.h  jsonstrategy.cpp  jsonstrategy.h  largefilestrategy.cpp  largefilestrategy.h  mediumfilestrategy.cpp  mediumfilestrategy.h  smallfilestrategy.cpp  smallfilestrategy.h
tests/: CMakeLists.txt  generate_test_json.py  run_tests.py  test_async_loading.cpp  test_copy.cpp  test_errors.cpp  test_navigation.cpp  test_paging.cpp  test_search.cpp  test_strategies.cpp  test_string_parsing.cpp
